[Bugfix] z-index for social widget component

--- a/src/main.css
+++ b/src/main.css
@@ -1206,6 +1206,7 @@ a > span:after {
   position: fixed;
   bottom: 3rem;
   right: 3rem;
+  z-index: 999;
 }
 .fab-checkbox {
   display: none;
